--- a/germax-frontend/src/templates/pages/index/index.html
+++ b/germax-frontend/src/templates/pages/index/index.html
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Location d'équipement</title>
-	<link rel="stylesheet" href="homepage.css">
+	<link rel="stylesheet" href="index.css">
 </head>
 
 <body>
