готовая версия для работы над проектом

--- a/germax-frontend/src/templates/components/content-page-index/index.html
+++ b/germax-frontend/src/templates/components/content-page-index/index.html
@@ -1,3 +1,5 @@
+<img src="../../../assets/img/GERMAX.jpg" alt="">
+
 <div class="sectionholder_1">
 	<div class="section_loc">
 		<div class="overlay">
