--- a/germax-frontend/src/templates/components/content-page-index/index.css
+++ b/germax-frontend/src/templates/components/content-page-index/index.css
@@ -1,3 +1,5 @@
+@import url(https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css);
+
 .background-image {
 	background-size: cover;
 	background-position: center;
@@ -5,7 +7,7 @@
   }
 
   .unique-background-1 {
-	background-image: url("../../../public/images/accueil.jpg");
+	/* background-image: url("../../../public/images/accueil.jpg"); */
 	background-attachment: fixed;
   }
 
@@ -22,7 +24,7 @@
   }
 
   .unique-background-2 {
-	background-image: url("../../../public/images/laptopbackground.jpg");
+	/* background-image: url("../../../public/images/laptopbackground.jpg"); */
   }
 
   .unique-background-2::before {
@@ -58,7 +60,7 @@
   .section_loc {
 	padding-top: 64px;
 	padding-bottom: 60px;
-	background-image: url("//f2.lpcdn.site/40b6d8e43698c90162344cb160dd8985/fadb47fdf5b9d5fd5a932a7e9bd1f3ee.jpg");
+	/* background-image: url("//f2.lpcdn.site/40b6d8e43698c90162344cb160dd8985/fadb47fdf5b9d5fd5a932a7e9bd1f3ee.jpg"); */
 	background-attachment: fixed;
 	background-position: center center;
 	background-size: cover;
