--- a/germax-frontend/src/templates/mocks/users/rentalManager/subpages/client/addClient.html
+++ b/germax-frontend/src/templates/mocks/users/rentalManager/subpages/client/addClient.html
@@ -38,7 +38,7 @@
 			<div class="col">
 				<div class="input-group mb-3 mt-3">
 					<div class="input-group-prepend">
-						<span class="input-group-text" id="basic-addon1"><img src="search-icon.svg" alt=""></span>
+						<!-- <span class="input-group-text" id="basic-addon1"><img src="search-icon.svg" alt=""></span> -->
 					</div>
 					<input type="text" class="form-control" placeholder="Recherche de clients..." aria-label="Поиск"
 						aria-describedby="basic-addon1">
@@ -111,7 +111,7 @@
 					<tr>
 						<td>
 							<div class="d-flex align-items-center">
-								<img src="img/user7.png" class="img-4x rounded-5 me-3" alt="Avatar">
+								<!-- <img src="img/user7.png" class="img-4x rounded-5 me-3" alt="Avatar"> -->
 								<p class="m-0">Felicia Quinn</p>
 							</div>
 						</td>
@@ -130,7 +130,7 @@
 					<tr>
 						<td>
 							<div class="d-flex align-items-center">
-								<img src="img/user7.png" class="img-4x rounded-5 me-3" alt="Avatar">
+								<!-- <img src="img/user7.png" class="img-4x rounded-5 me-3" alt="Avatar"> -->
 								<p class="m-0">Felicia Quinn</p>
 							</div>
 						</td>
