--- a/germax-frontend/src/templates/components/content-page-equipment-list/index.html
+++ b/germax-frontend/src/templates/components/content-page-equipment-list/index.html
@@ -1,1 +1,21 @@
-asd
+<body>
+	<div class="container-fluid">
+	  <div class="row">
+		<div id="type-filter" class="col-md-3">
+		  <div class="list-group">
+			<a href="#" class="list-group-item list-group-item-action" data-type="laptop">Ordinateurs portables</a>
+			<a href="#" class="list-group-item list-group-item-action" data-type="сomputer_monitor">Ecrans d'ordinateurs</a>
+			<a href="#" class="list-group-item list-group-item-action" data-type="smartphone">Smartphones</a>
+			<a href="#" class="list-group-item list-group-item-action" data-type="accessory">Accessoires</a>
+			<a href="#" class="list-group-item list-group-item-action" data-type="tablet">Tablettes</a>
+			<a href="#" class="list-group-item list-group-item-action" data-type="VR_headset">Casque VR</a>
+		  </div>
+		</div>
+		<div id="equipment-list" class="col-md-9">
+		  <!-- Les unités du matériel apparaîtront ici -->
+		</div>
+		<div class="col-md-12 text-center">
+		  <button id="load-more" class="btn btn-primary mt-3">Charger plus</button>
+		</div>
+	  </div>
+	</div>
