--- a/germax-frontend/src/templates/components/content-page-loans-rental-history/index.html
+++ b/germax-frontend/src/templates/components/content-page-loans-rental-history/index.html
@@ -1,1 +1,21 @@
-asd
+<div class="col-md-9">
+	<div class="tab-pane fade show active" id="rentalHistory" role="tabpanel">
+		<h3>История аренды и статус текущих бронирований</h3>
+		<div class="table-responsive">
+			<table class="table">
+				<thead>
+					<tr>
+						<th>Номер бронирования</th>
+						<th>Название оборудования</th>
+						<th>Дата начала</th>
+						<th>Дата окончания</th>
+						<th>Статус</th>
+					</tr>
+				</thead>
+				<tbody>
+					<!-- Здесь динамически загружаются данные о бронированиях -->
+				</tbody>
+			</table>
+		</div>
+	</div>
+</div>
