--- a/germax-frontend/src/templates/components/content-page-stockman-equipment-awaiting-repair/index.html
+++ b/germax-frontend/src/templates/components/content-page-stockman-equipment-awaiting-repair/index.html
@@ -1,1 +1,20 @@
-asd
+<div class="tab-pane fade show active" id="materiels-attente-maintenance" role="tabpanel"
+		aria-labelledby="materiels-attente-maintenance-link">
+		<h2>Matériel en attente de maintenance</h2>
+		<div class="table-responsive">
+			<table class="table">
+				<thead>
+					<tr>
+						<th>ID Matériel</th>
+						<th>Description</th>
+						<th>Date de Signalement</th>
+						<th>Problème Signalé</th>
+						<th>Actions</th>
+					</tr>
+				</thead>
+				<tbody>
+					<!-- Les lignes de tableau seront générées dynamiquement ici -->
+				</tbody>
+			</table>
+		</div>
+	</div>
