--- a/germax-frontend/src/templates/components/content-page-stockman-equipment-under-repair/index.html
+++ b/germax-frontend/src/templates/components/content-page-stockman-equipment-under-repair/index.html
@@ -1,1 +1,19 @@
-asd
+<div class="tab-pane fade show active" id="materiels-maintenance" role="tabpanel" aria-labelledby="materiels-maintenance-link">
+	<h2>Matériel en maintenance</h2>
+	<div class="table-responsive">
+		<table class="table">
+			<thead>
+				<tr>
+					<th>ID Matériel</th>
+					<th>Description</th>
+					<th>Date de Début de Maintenance</th>
+					<th>Estimé de Fin de Maintenance</th>
+					<th>Statut</th>
+				</tr>
+			</thead>
+			<tbody>
+				<!-- Les lignes de tableau seront générées dynamiquement ici -->
+			</tbody>
+		</table>
+	</div>
+</div>
