--- a/germax-frontend/src/templates/components/content-page-stockman-equipment-with-remarks/index.html
+++ b/germax-frontend/src/templates/components/content-page-stockman-equipment-with-remarks/index.html
@@ -1,1 +1,20 @@
-asd
+<div class="tab-pane fade show active" id="materiels-signalement" role="tabpanel" aria-labelledby="materiels-signalement-link">
+	<h2>Matériel avec signalement</h2>
+	<div class="table-responsive">
+		<table class="table">
+			<thead>
+				<tr>
+					<th>ID Matériel</th>
+					<th>Description</th>
+					<th>Date de Signalement</th>
+					<th>Détails du Problème</th>
+					<th>Statut</th>
+					<th>Actions</th>
+				</tr>
+			</thead>
+			<tbody>
+				<!-- Les lignes de tableau seront générées dynamiquement ici -->
+			</tbody>
+		</table>
+	</div>
+</div>
