--- a/germax-frontend/src/templates/mocks/registration/registration.html
+++ b/germax-frontend/src/templates/mocks/registration/registration.html
@@ -40,6 +40,14 @@
                                 <label for="confirmPassword" class="form-label">Confirm Password</label>
                                 <input type="password" class="form-control" id="confirmPassword" name="confirmPassword"
                                     placeholder="Confirm Password">
+								<select name="type">
+									<option value="admin">Admin</option>
+									<option value="rental-manager">Manager</option>
+									<option value="stockman">Учитель</option>
+									<option value="teacher">Enseignant</option>
+									<option value="student">Etudiant</option>
+
+								</select>
                             </div>
                             <button type="submit" class="btn btn-primary btn-block">Register</button>
                         </form>
