--- a/germax-frontend/src/templates/components/content-page-dashboard/index.html
+++ b/germax-frontend/src/templates/components/content-page-dashboard/index.html
@@ -34,13 +34,7 @@
     <div class="row">
       <div class="col-md-3">
         <div class="list-group">
-          <a href="#" class="list-group-item list-group-item-action">Dashboard</a>
-          <a href="#" class="list-group-item list-group-item-action">User Management</a>
-          <a href="#" class="list-group-item list-group-item-action">Equipment Management</a>
-          <a href="#" class="list-group-item list-group-item-action">Reservation Management</a>
-          <a href="#" class="list-group-item list-group-item-action">Reports</a>
-          <a href="#" class="list-group-item list-group-item-action">Feedback and Issues</a>
-          <a href="#" class="list-group-item list-group-item-action">Settings</a>
+          <!-- Содержимое меню формируется динамически -->
         </div>
       </div>
       <div class="col-md-9">
