--- a/germax-frontend/src/templates/components/content-page-rental-manager-information-calendar/index.html
+++ b/germax-frontend/src/templates/components/content-page-rental-manager-information-calendar/index.html
@@ -1,1 +1,9 @@
-asd
+<div class="container h-100">
+	<div class="row h-100 justify-content-center align-items-center">
+		<div class="col-md-9 text-center">
+			<h1>Agenda de locations</h1>
+		</div>
+	</div>
+</div>
+
+<div id="calendar" class="mt-3"></div>
