--- a/germax-frontend/src/templates/components/content-page-index/index.html
+++ b/germax-frontend/src/templates/components/content-page-index/index.html
@@ -264,3 +264,5 @@
 		<!-- Spoiler/Toggle sections end here -->
 	</section>
 </div>
+
+@import url(https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css);
