--- a/germax-frontend/src/templates/components/content-page-rental-manager-information-calendar/index.css
+++ b/germax-frontend/src/templates/components/content-page-rental-manager-information-calendar/index.css
@@ -8,3 +8,5 @@ body, html {
 	display: flex; /* Использует flexbox для выравнивания */
 	flex-direction: column; /* Ориентация элементов в колонку */
 }
+
+@import url(https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css);
