--- a/germax-frontend/src/templates/components/content-page-stockman-future-reservations/index.css
+++ b/germax-frontend/src/templates/components/content-page-stockman-future-reservations/index.css
@@ -14,3 +14,5 @@ html {
 	flex-direction: column;
 	/* Ориентация элементов в колонку */
 }
+
+@import url(https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css);
