gestion de l'équipement - ajouter un équipement (modal bootstrap)

--- a/germax-frontend/src/templates/components/content-page-admin-equipment-management/index.html
+++ b/germax-frontend/src/templates/components/content-page-admin-equipment-management/index.html
@@ -1,9 +1,10 @@
 <div class="container mt-4">
 	<h2>Gestion de l'Équipement</h2>
 	<div class="mb-4">
-		<button class="btn btn-primary" data-toggle="modal" data-target="#addEquipmentModal">Ajouter un
+		<button class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#addEquipmentModal">Ajouter un
 			équipement</button>
-		<button class="btn btn-secondary" data-toggle="modal" data-target="#addCategoryModal">Ajouter une
+		<button class="btn btn-secondary" data-bs-toggle="modal"
+			data-bs-target="#addEquipmentModal">Ajouter une
 			catégorie</button>
 	</div>
 	<div class="row">
@@ -34,7 +35,7 @@
 		<div class="modal-content">
 			<div class="modal-header">
 				<h5 class="modal-title" id="addEquipmentModalLabel">Ajouter un nouvel équipement</h5>
-				<button type="button" class="close" data-dismiss="modal" aria-label="Close">
+				<button type="button" class="close" data-bs-dismiss="modal" aria-label="Close">
 					<span aria-hidden="true">&times;</span>
 				</button>
 			</div>
@@ -64,7 +65,7 @@
 				</form>
 			</div>
 			<div class="modal-footer">
-				<button type="button" class="btn btn-secondary" data-dismiss="modal">Fermer</button>
+				<button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Fermer</button>
 				<button type="button" class="btn btn-primary">Sauvegarder</button>
 			</div>
 		</div>
@@ -78,7 +79,7 @@
 		<div class="modal-content">
 			<div class="modal-header">
 				<h5 class="modal-title" id="addCategoryModalLabel">Ajouter une nouvelle catégorie</h5>
-				<button type="button" class="close" data-dismiss="modal" aria-label="Close">
+				<button type="button" class="close" data-bs-dismiss="modal" aria-label="Close">
 					<span aria-hidden="true">&times;</span>
 				</button>
 			</div>
@@ -92,7 +93,7 @@
 			</div>
 			<div class="modal-footer">
 				<button type="button" class="btn btn-secondary
-	" data-dismiss="modal">Fermer</button>
+	" data-bs-dismiss="modal">Fermer</button>
 				<button type="button" class="btn btn-primary">Sauvegarder la catégorie</button>
 			</div>
 		</div>
@@ -104,14 +105,14 @@
 <!-- Раздел для отображения журнала действий, связанных с каждым оборудованием. Это позволит администратору просматривать историю бронирований и других операций с оборудованием. -->
 
 <div class="equipment-actions-log mt-4">
-	<h3>Журнал действий</h3>
+	<h3>Journal des actions</h3>
 	<table class="table">
 		<thead>
 			<tr>
-				<th>Время</th>
-				<th>Пользователь</th>
-				<th>Действие</th>
-				<th>Оборудование</th>
+				<th>Temps</th>
+				<th>Utilisateur</th>
+				<th>Action</th>
+				<th>Équipement</th>
 			</tr>
 		</thead>
 		<tbody>
