réalisé l'ajout d'une catégorie

--- a/germax-frontend/src/templates/components/content-page-admin-equipment-management/index.html
+++ b/germax-frontend/src/templates/components/content-page-admin-equipment-management/index.html
@@ -3,8 +3,7 @@
 	<div class="mb-4">
 		<button class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#addEquipmentModal">Ajouter un
 			équipement</button>
-		<button class="btn btn-secondary" data-bs-toggle="modal"
-			data-bs-target="#addEquipmentModal">Ajouter une
+		<button class="btn btn-secondary" data-bs-toggle="modal" data-bs-target="#addCategoryModal">Ajouter une
 			catégorie</button>
 	</div>
 	<div class="row">
@@ -94,7 +93,8 @@
 			<div class="modal-footer">
 				<button type="button" class="btn btn-secondary
 	" data-bs-dismiss="modal">Fermer</button>
-				<button type="button" class="btn btn-primary">Sauvegarder la catégorie</button>
+				<button type="button" id="saveCategoryBtn" class="btn btn-primary">Sauvegarder la catégorie</button>
+
 			</div>
 		</div>
 
